--- a/EnroladorStandAloneV2/FrmPrincipal.resx
+++ b/EnroladorStandAloneV2/FrmPrincipal.resx
@@ -232,4 +232,7 @@
         gNISVFkNmnwJqqwGTW7TuS8XvJRghdlxTQAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="backgroundWorkerChequeoNotificaciones.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
