--- a/EnroladorStandAloneV2/Properties/Resources.resx
+++ b/EnroladorStandAloneV2/Properties/Resources.resx
@@ -142,4 +142,19 @@
   <data name="customer_16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\customer_16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Huella_NoSeteada" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\CapaInterfazUsuario\Recursos\Huella_NoSeteada.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Huella_Seleccionada" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\CapaInterfazUsuario\Recursos\Huella_Seleccionada.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Huella_Seteada" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\CapaInterfazUsuario\Recursos\Huella_Seteada.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Manos" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\CapaInterfazUsuario\Recursos\Manos.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SplashScreen" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\CapaInterfazUsuario\Recursos\SplashScreen.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
