--- a/EnroladorStandAloneV2/CapaInterfazUsuario/Enrolar/UCManejarAsistencia.resx
+++ b/EnroladorStandAloneV2/CapaInterfazUsuario/Enrolar/UCManejarAsistencia.resx
@@ -126,4 +126,7 @@
   <metadata name="bsInstalaciones.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>307, 17</value>
   </metadata>
+  <metadata name="dxErrorProvider.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>441, 17</value>
+  </metadata>
 </root>
