--- a/EnroladorStandAloneV2/CapaInterfazUsuario/Enrolar/UCEnrolarContratos.resx
+++ b/EnroladorStandAloneV2/CapaInterfazUsuario/Enrolar/UCEnrolarContratos.resx
@@ -129,6 +129,9 @@
   <metadata name="bsEmpresas.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>134, 17</value>
   </metadata>
+  <metadata name="DevDxErrorProvider.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>483, 19</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>63</value>
   </metadata>
