--- a/EnroladorStandAloneV2/CapaInterfazUsuario/Enrolar/UCManejarCasino.resx
+++ b/EnroladorStandAloneV2/CapaInterfazUsuario/Enrolar/UCManejarCasino.resx
@@ -129,4 +129,7 @@
   <metadata name="bsInstalaciones.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>228, 14</value>
   </metadata>
+  <metadata name="dxErrorProvider.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 53</value>
+  </metadata>
 </root>
