- Hay que probar el Huellero - Ya solo falta guardar los cambios y el descartar - Asi como almacenar las acciones de esos cambios guardados

--- a/EnroladorStandAloneV2/CapaInterfazUsuario/Enrolar/UCEnrolarHuellas.resx
+++ b/EnroladorStandAloneV2/CapaInterfazUsuario/Enrolar/UCEnrolarHuellas.resx
@@ -117,4 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="flyoutPanel.OptionsButtonPanel.Buttons" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAAsAAAAJCAYAAADkZNYtAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wQAADsEBuJFr7QAAABp0RVh0U29mdHdhcmUAUGFpbnQuTkVUIHYzLjUuMTFH80I3AAAASUlEQVQoU42M
+        2w0AIAgD2Zop3MydFBJKqI/ox6WWXhRV/QaPZozIKtD9Ohw6yVXokSk6VQQQPWmjYnz/DBHC2lPehoDu
+        dXigMgHUt6U3eYvcWQAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
